examples/test/testpolicy15768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15768
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key9: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value31
          key9: value28
          key43: value43
      podSelector:
        matchLabels:
          key26: value32
          key32: value2
          key19: value16
